# radish.buildtool

./: .gitignore  Cargo.toml  README.md  conf.ini
.github/workflows/: build.yml  tests.yml
src/: lib.rs
src/app/: comp_batch_exec.rs  comp_menu.rs  mod.rs  utils.rs
src/app/batch/: mod.rs
src/app/menu/: mod.rs
src/gui/: mod.rs
src/gui/aux_windows/: mod.rs
src/gui/batch/: mod.rs
src/gui/menu/: mod.rs
src/utils/: config.rs  mod.rs  paths.rs
