[package]
name = "w3-buildtool"
version = "0.1.0"
edition = "2021"
authors = ["culorin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
tracing-subscriber = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
rfd = "0.10"
image = "0.24.5"
